# ns-emu-mod-downloader

./: Cargo.toml
.github/workflows/: release.yml
src/: main.rs  mod_downloader.rs  paths.rs  utils.rs
src/entities/: game.rs  github.rs
