[package]
name = "ns-emu-mod-downloader"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
curl = "0.4.49"
dirs = "6.0.0"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
